# asana-cli

./: Cargo.toml  README.md
.codex/skills/asana-cli/: SKILL.md
examples/.asana/: asana.jsonc
src/: cli.rs  cmd.rs  config.rs  error.rs  lib.rs  main.rs  output.rs  server.rs  skills.rs  util.rs
src/asana/: client.rs  mod.rs  operation.rs  operations.json  reference.rs  request.rs
src/mock/: mod.rs  routes.rs  server.rs  state.rs  storage.rs
tests/: all_operations.rs  cli_smoke.rs  cmd_against_mock.rs  cmd_cli.rs  config_cli.rs  help_output.rs  make_skill.rs  mock_server.rs
tests/fixtures/config/: invalid-base-url.jsonc  invalid-mode.jsonc  missing-token.jsonc  valid.jsonc
