[package]
name = "asana-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "asana"
path = "src/main.rs"

[dependencies]
anyhow = "=1.0.102"
axum = "=0.8.9"
clap = { version = "=4.6.1", features = ["derive"] }
jsonc-parser = { version = "=0.32.4", features = ["serde"] }
reqwest = { version = "=0.13.4", features = ["json", "multipart"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
thiserror = "=2.0.18"
tokio = { version = "=1.52.3", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tower-http = { version = "=0.6.11", features = ["trace"] }

[dev-dependencies]
assert_cmd = "=2.2.2"
predicates = "=3.1.4"
tempfile = "=3.27.0"
